[package]
name = "rust-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "^0.19"
yew-router = "^0.16"
rand = "^0.8.5"
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
web-sys = "0.3.57"